# transform-rules-rs

./: .gitignore  Cargo.toml  README.md  server.json
crates/transform_rules/: Cargo.toml
crates/transform_rules/benches/: transform_bench.rs
crates/transform_rules/src/: cache.rs  dto.rs  error.rs  lib.rs  locator.rs  model.rs  path.rs  transform.rs  validator.rs
crates/transform_rules/tests/: array_ops_overflow_32bit.rs  dto_golden.rs  performance.rs  record_when.rs  transform_golden.rs  validation.rs
crates/transform_rules/tests/fixtures/dto01_basic/: expected_go.go  expected_java.java  expected_kotlin.kt  expected_python.py  expected_rust.rs  expected_swift.swift  expected_typescript.ts  rules.yaml
crates/transform_rules/tests/fixtures/r01_float_non_finite/: expected_error.json  input.json  rules.yaml
crates/transform_rules/tests/fixtures/r02_json_ops_invalid_path_pick/: expected_error.json  rules.yaml
crates/transform_rules/tests/fixtures/r03_json_ops_non_object/: input.json  rules.yaml
crates/transform_rules/tests/fixtures/r04_json_ops_null_arg/: input.json  rules.yaml
crates/transform_rules/tests/fixtures/r05_json_ops_unflatten_array_index/: input.json  rules.yaml
crates/transform_rules/tests/fixtures/r06_json_ops_flatten_brackets/: expected_error.json  input.json
crates/transform_rules_cli/: Cargo.toml
crates/transform_rules_cli/src/: main.rs
crates/transform_rules_cli/tests/: cli.rs
crates/transform_rules_mcp/: Cargo.toml
crates/transform_rules_mcp/src/: main.rs
crates/transform_rules_mcp/tests/: stdio.rs
docs/: ROADMAP.md  (+5 more)
(+99 files in other folders)
