[package]
name = "transform_rules"
version = "0.1.3"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
regex = "1.12"
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "transform_bench"
harness = false