[package]
name = "transform_rules_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transform-rules"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
transform_rules = { path = "../transform_rules" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
