[package]
name = "transform_rules_mcp"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "transform-rules-mcp"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
transform_rules = { path = "../transform_rules" }

[dev-dependencies]
tempfile = "3.10"
